--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="production/images/favicon.ico" type="image/ico" />
+	<link rel="icon" href="frontend/production/images/favicon.ico" type="image/ico" />
 
     <title>Internship Management System </title>
 
     <!-- Bootstrap -->
-    <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="frontend/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="frontend/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- NProgress -->
-    <link href="vendors/nprogress/nprogress.css" rel="stylesheet">
+    <link href="frontend/vendors/nprogress/nprogress.css" rel="stylesheet">
     <!-- iCheck -->
-    <link href="vendors/iCheck/skins/flat/green.css" rel="stylesheet">
+    <link href="frontend/vendors/iCheck/skins/flat/green.css" rel="stylesheet">
 	
     <!-- bootstrap-progressbar -->
-    <link href="vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
+    <link href="frontend/vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
     <!-- JQVMap -->
-    <link href="vendors/jqvmap/dist/jqvmap.min.css" rel="stylesheet"/>
+    <link href="frontend/vendors/jqvmap/dist/jqvmap.min.css" rel="stylesheet"/>
     <!-- bootstrap-daterangepicker -->
-    <link href="vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+    <link href="frontend/vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="build/css/custom.min.css" rel="stylesheet">
+    <link href="frontend/build/css/custom.min.css" rel="stylesheet">
   </head>
 
   <body class="nav-md">
@@ -44,7 +44,7 @@
             <!-- menu profile quick info -->
             <div class="profile clearfix">
               <div class="profile_pic">
-                <img src="production/images/img.jpg" alt="..." class="img-circle profile_img">
+                <img src="frontend/production/images/img.jpg" alt="..." class="img-circle profile_img">
               </div>
               <div class="profile_info">
                 <span>Welcome,</span>
@@ -90,7 +90,7 @@
               <a data-toggle="tooltip" data-placement="top" title="Lock">
                 <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
               </a>
-              <a data-toggle="tooltip" data-placement="top" title="Logout" href="login.html">
+              <a data-toggle="tooltip" data-placement="top" title="Logout" href="frontend/login.html">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
               </a>
             </div>
@@ -109,7 +109,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="production/images/img.jpg" alt="">John Doe
+                    <img src="frontend/production/images/img.jpg" alt="">John Doe
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -121,7 +121,7 @@
                       </a>
                     </li>
                     <li><a href="javascript:;">Help</a></li>
-                    <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                    <li><a href="frontend/login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                   </ul>
                 </li>
 
@@ -133,7 +133,7 @@
                   <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
                     <li>
                       <a>
-                        <span class="image"><img src="production/images/img.jpg" alt="Profile Image" /></span>
+                        <span class="image"><img src="frontend/production/images/img.jpg" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -145,7 +145,7 @@
                     </li>
                     <li>
                       <a>
-                        <span class="image"><img src="production/images/img.jpg" alt="Profile Image" /></span>
+                        <span class="image"><img src="frontend/production/images/img.jpg" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -157,7 +157,7 @@
                     </li>
                     <li>
                       <a>
-                        <span class="image"><img src="production/images/img.jpg" alt="Profile Image" /></span>
+                        <span class="image"><img src="frontend/production/images/img.jpg" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -169,7 +169,7 @@
                     </li>
                     <li>
                       <a>
-                        <span class="image"><img src="production/images/img.jpg" alt="Profile Image" /></span>
+                        <span class="image"><img src="frontend/production/images/img.jpg" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -201,32 +201,32 @@
            <div class="row tile_count">
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
               <span class="count_top"><i class="fa fa-user"></i><a href="form1.html"> Form I-1</a></span>
-              <div class="image"><a href="form1.html"><img src="production/images/spm.png" alt="Profile Image" /></a></div>
+              <div class="image"><a href="form1.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
               <!--<span class="count_bottom"><i class="green">4% </i> From last Week</span>-->
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
               <span class="count_top"><i class="fa fa-clock-o"></i><a href="form3.html"> Form I-3 </a></span>
-              <div class="image"><a href="form3.html"><img src="production/images/spm.png" alt="Profile Image" /></a></div>
+              <div class="image"><a href="form3.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
               <!--<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>3% </i> From last Week</span>-->
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
               <span class="count_top"><i class="fa fa-user"></i><a href="form4.html"> Form I-4 </a></span>
-              <div class="image"><a href="form4.html"><img src="production/images/spm.png" alt="Profile Image" /></a></div>
+              <div class="image"><a href="form4.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
               <!--<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>-->
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
               <span class="count_top"><i class="fa fa-user"></i> <a href="form5.html">Form I-5 </a></span>
-              <div class="image"><a href="form5.html"><img src="production/images/spm.png" alt="Profile Image" /></a></div>
+              <div class="image"><a href="form5.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
               <!--<span class="count_bottom"><i class="red"><i class="fa fa-sort-desc"></i>12% </i> From last Week</span>-->
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
               <span class="count_top"><i class="fa fa-user"></i><a href="form6.html"> Form I-6 </a></span>
-              <div class="image"><a href="form6.html"><img src="production/images/spm.png" alt="Profile Image" /></a></div>
+              <div class="image"><a href="form6.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
              <!-- <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>-->
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
               <span class="count_top"><i class="fa fa-user"></i><a href="form7.html"> Form I-7</a></span>
-              <div class="image"><a href="form7.html"><img src="production/images/spm.png" alt="Profile Image" /></a></div>
+              <div class="image"><a href="form7.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
               <!--<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>-->
             </div>
           </div> 
@@ -247,45 +247,45 @@
     </div>
 
     <!-- jQuery -->
-    <script src="vendors/jquery/dist/jquery.min.js"></script>
+    <script src="frontend/vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
-    <script src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="frontend/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- FastClick -->
-    <script src="vendors/fastclick/lib/fastclick.js"></script>
+    <script src="frontend/vendors/fastclick/lib/fastclick.js"></script>
     <!-- NProgress -->
-    <script src="vendors/nprogress/nprogress.js"></script>
+    <script src="frontend/vendors/nprogress/nprogress.js"></script>
     <!-- Chart.js -->
-    <script src="vendors/Chart.js/dist/Chart.min.js"></script>
+    <script src="frontend/vendors/Chart.js/dist/Chart.min.js"></script>
     <!-- gauge.js -->
-    <script src="vendors/gauge.js/dist/gauge.min.js"></script>
+    <script src="frontend/vendors/gauge.js/dist/gauge.min.js"></script>
     <!-- bootstrap-progressbar -->
-    <script src="vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
+    <script src="frontend/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
     <!-- iCheck -->
-    <script src="vendors/iCheck/icheck.min.js"></script>
+    <script src="frontend/vendors/iCheck/icheck.min.js"></script>
     <!-- Skycons -->
-    <script src="vendors/skycons/skycons.js"></script>
+    <script src="frontend/vendors/skycons/skycons.js"></script>
     <!-- Flot -->
-    <script src="vendors/Flot/jquery.flot.js"></script>
-    <script src="vendors/Flot/jquery.flot.pie.js"></script>
-    <script src="vendors/Flot/jquery.flot.time.js"></script>
-    <script src="vendors/Flot/jquery.flot.stack.js"></script>
-    <script src="vendors/Flot/jquery.flot.resize.js"></script>
+    <script src="frontend/vendors/Flot/jquery.flot.js"></script>
+    <script src="frontend/vendors/Flot/jquery.flot.pie.js"></script>
+    <script src="frontend/vendors/Flot/jquery.flot.time.js"></script>
+    <script src="frontend/vendors/Flot/jquery.flot.stack.js"></script>
+    <script src="frontend/vendors/Flot/jquery.flot.resize.js"></script>
     <!-- Flot plugins -->
-    <script src="vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
-    <script src="vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
-    <script src="vendors/flot.curvedlines/curvedLines.js"></script>
+    <script src="frontend/vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
+    <script src="frontend/vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
+    <script src="frontend/vendors/flot.curvedlines/curvedLines.js"></script>
     <!-- DateJS -->
-    <script src="vendors/DateJS/build/date.js"></script>
+    <script src="frontend/vendors/DateJS/build/date.js"></script>
     <!-- JQVMap -->
-    <script src="vendors/jqvmap/dist/jquery.vmap.js"></script>
-    <script src="vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
-    <script src="vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
+    <script src="frontend/vendors/jqvmap/dist/jquery.vmap.js"></script>
+    <script src="frontend/vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
+    <script src="frontend/vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
     <!-- bootstrap-daterangepicker -->
-    <script src="vendors/moment/min/moment.min.js"></script>
-    <script src="vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <script src="frontend/vendors/moment/min/moment.min.js"></script>
+    <script src="frontend/vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
 
     <!-- Custom Theme Scripts -->
-    <script src="build/js/custom.min.js"></script>
+    <script src="frontend/build/js/custom.min.js"></script>
 	
   </body>
 </html>
