--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
           <!-- top tiles -->
            <div class="row tile_count">
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i><a href="form1.html"> Form I-1</a></span>
-              <div class="image"><a href="form1.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
+              <span class="count_top"><i class="fa fa-user"></i><a href="frontend/form1.html"> Form I-1</a></span>
+              <div class="image"><a href="frontend/form1.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
               <!--<span class="count_bottom"><i class="green">4% </i> From last Week</span>-->
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
