--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
               <!--<span class="count_bottom"><i class="green">4% </i> From last Week</span>-->
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-clock-o"></i><a href="form3.html"> Form I-3 </a></span>
-              <div class="image"><a href="form3.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
+              <span class="count_top"><i class="fa fa-clock-o"></i><a href="frontend/form3.html"> Form I-3 </a></span>
+              <div class="image"><a href="frontend/form3.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
               <!--<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>3% </i> From last Week</span>-->
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
