--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="frontend/production/images/favicon.ico" type="image/ico" />
+	  <link rel="icon" href="frontend/production/images/favicon.ico" type="image/ico" />
 
     <title>Internship Management System </title>
 
@@ -200,18 +200,18 @@
           <!-- top tiles -->
            <div class="row tile_count">
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i><a href="frontend/form1.html"> Form I-1</a></span>
-              <div class="image"><a href="frontend/form1.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
+              <span class="count_top"><i class="fa fa-user"></i><a id="form_I_1a" > Form I-1</a></span>
+              <div class="image"><a id="form_I_1b" ><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
               <!--<span class="count_bottom"><i class="green">4% </i> From last Week</span>-->
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-clock-o"></i><a href="form3.html"> Form I-3 </a></span>
-              <div class="image"><a href="form3.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
+              <span class="count_top"><i class="fa fa-clock-o"></i><a id="form_I_3a"> Form I-3 </a></span>
+              <div class="image"><a id="form_I_3b" ><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
               <!--<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>3% </i> From last Week</span>-->
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i><a href="form4.html"> Form I-4 </a></span>
-              <div class="image"><a href="form4.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
+              <span class="count_top"><i class="fa fa-user"></i><a href="frontend/form1.html"> Form I-4 </a></span>
+              <div class="image"><a href="frontend/form1.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
               <!--<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>-->
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
@@ -231,6 +231,12 @@
             </div>
           </div> 
           <!-- /top tiles -->
+
+          <div class="row tile_count" id="forms">
+
+            
+          </div>
+
           <br />
         </div>
         <!-- /page content -->
@@ -286,6 +292,9 @@
 
     <!-- Custom Theme Scripts -->
     <script src="frontend/build/js/custom.min.js"></script>
-	
+
+    <!-- form inside Scripts -->
+    <script src="frontend/build/js/form_inside_dashboard.js"></script>
+    	
   </body>
 </html>
