updated the backend with latest master and fronend form 1 and made it ready to merge

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <!-- /top tiles -->
 
           <div class="row tile_count" id="forms">
-
+            <img style="float:right" src="frontend/production/images/SLIIT.png" alt="SLIIT" width="100%">
             
           </div>
 
