--- a/frontend/form1.html
+++ b/frontend/form1.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" href="frontend/production/images/favicon.ico" type="image/ico" />
+	<link rel="icon" href="production/images/favicon.png" type="image/ico" />
 
-	<title>Form 1</title>
+	<title>IMS | Form 1</title>
 
 	<!-- Bootstrap -->
 	<link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
