--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,8 +7,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Gentelella Alela! | </title>
+    <link rel="icon" href="production/images/favicon.png" type="image/ico" />
+    
+    <title>IMS | Login</title>
 
     <!-- Bootstrap -->
     <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -59,10 +60,10 @@
                 </form>
                 <script type="text/javascript">
                     $(document).ready(function () {
-                        if (localStorage.getItem('token')) {
-                            window.location.href = "index.html";
-                            return;
-                        }
+                        // if (localStorage.getItem('token')) {
+                        //     window.location.href = "index.html";
+                        //     return;
+                        // }
 
                         $("#login").click(function (event) {
                             event.preventDefault();
