--- a/frontend/registration.html
+++ b/frontend/registration.html
@@ -7,8 +7,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="production/images/favicon.png" type="image/ico" />
 
-    <title>IMS | Login</title>
+    <title>IMS | Registration</title>
 
     <!-- Bootstrap -->
     <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
