--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <link rel="icon" href="frontend/production/images/favicon.ico" type="image/ico" />
+	  <link rel="icon" href="frontend/production/images/favicon.png" type="image/ico" />
 
     <title>Internship Management System </title>
 
