--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="frontend/production/js/jquery.min.js"></script>
 </head>
 
-<body class="login" onload="back_block();">
+<body class="login">
 <div>
     <a class="hiddenanchor" id="signup"></a>
     <a class="hiddenanchor" id="signin"></a>
