fixed issue source code visibility to public with proper paths for pages

--- a/frontend/form1.html
+++ b/frontend/form1.html
@@ -27,7 +27,7 @@
 </style>
 
 <script src="production/js/jquery.min.js"></script>
-<script src="../sweetalert2.all.min.js"></script>
+<script src="production/js/sweetalert2.all.min.js"></script>
 
 </head>
 <body>
