--- a/frontend/registration.html
+++ b/frontend/registration.html
@@ -24,7 +24,7 @@
     <link href="build/css/custom.min.css" rel="stylesheet">
 
     <script src="production/js/jquery.min.js"></script>
-    <script src="../sweetalert2.all.min.js"></script>
+    <script src="production/js/sweetalert2.all.min.js"></script>
 </head>
 
 <body class="login">
