--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Custom Theme Style -->
     <link href="frontend/build/css/custom.min.css" rel="stylesheet">
-    <script src="sweetalert2.all.min.js"></script>
+    <script src="frontend/production/js/sweetalert2.all.min.js"></script>
     <script src="frontend/production/js/jquery.min.js"></script>
 </head>
 
