added ids for missing inputs

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 <form>
                     <h1>Login Form</h1>
                     <div class="flat">
-                        <span style="float: left; margin-left: 20px; margin-bottom: 20px;"><input type="radio" name="user" value="student" class="flat"> Student</span>
-                        <span style="margin-bottom: 20px;"><input type="radio" name="user" value="company" class="flat"> Company</span>
-                        <span style="margin-bottom: 20px; margin-left: 20px;"><input type="radio" name="user" value="examiner" class="flat"> Examiner</span>
-                        <span style="float: right; margin-right: 20px; margin-bottom: 20px;"><input type="radio" name="user" value="itm" class="flat">ITM</span>
+                        <span style="float: left; margin-left: 20px; margin-bottom: 20px;"><input id="opst" type="radio" name="user" value="student" class="flat"> Student</span>
+                        <span style="margin-bottom: 20px;"><input id="opco" type="radio" name="user" value="company" class="flat"> Company</span>
+                        <span style="margin-bottom: 20px; margin-left: 20px;"><input id="opex" type="radio" name="user" value="examiner" class="flat"> Examiner</span>
+                        <span style="float: right; margin-right: 20px; margin-bottom: 20px;"><input id="opitm" type="radio" name="user" value="itm" class="flat">ITM</span>
                     </div>
                     <br>
                     <div>
