--- a/frontend/home.html
+++ b/frontend/home.html
@@ -64,7 +64,7 @@
                       <li><a href="home.html">Dashboard</a></li>
                     </ul>
                   </li>
-                  <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
+                  <li><a id="formdropdown"><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a class="form_I_1" id="form_I_1a">Form I-1</a></li>
                       <li><a class="form_I_3" id="form_I_3a">Form I-3</a></li>
