--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div>
                         <a class="btn btn-default submit" id="login">Log in</a>
                         <a class="reset_pass" href="#">Lost your password?</a>
-                        <a class="reset_pass" href="frontend/registration.html">New to IMS System??</a>
+                        <a class="reset_pass" id="registration" href="frontend/registration.html">New to IMS System??</a>
                     </div>
 
                     <div class="clearfix"></div>
