--- a/frontend/form5.html
+++ b/frontend/form5.html
@@ -383,6 +383,7 @@
 
 </form>
 <script>  
+//script for selecting only one checkbox in a row
   $("input:checkbox").on('click', function() {
       // in the handler, 'this' refers to the box clicked on
       var $box = $(this);
