--- a/frontend/registration.html
+++ b/frontend/registration.html
@@ -38,7 +38,7 @@
                 <form>
                     <h1>User Registration</h1>
                     <div>
-                        <input type="text" class="form-control" placeholder="username" id='username' required="" />
+                        <input type="text" class="form-control" placeholder="name" id='username' required="" />
                     </div>
                     <div class="flat">
                         <span style="float: left; margin-left: 20px; margin-bottom: 20px;"><input id="opst" type="radio" name="user" value="student" class="flat"> Student</span>
