--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <br>
                     <div>
-                        <input type="text" class="form-control" placeholder="Username" id="email" required="" />
+                        <input type="text" class="form-control" placeholder="Email" id="email" required="" />
                     </div>
                     <div>
                         <input type="password" class="form-control" placeholder="Password" id= "password" required="" />
