--- a/frontend/Form3.html
+++ b/frontend/Form3.html
@@ -179,7 +179,7 @@
                         <div class=" col-md-3 col-sm-6 col-xs-12">
                         </div>
                     </div>
-
+                    <!--Table to show the training data-->
                     <div class="form-group">
                         <table class="table table-bordered">
                             <thead>
@@ -297,7 +297,7 @@
                     </div>
 
     </form>
-
+    <!-- Script to manage the functionality of the page -->
     <script src="build/js/form3.js"></script>
 </body>
 
